Improved label management.
Outgoing messages and incoming found messages now change their focus
state together with a lifeline.

Signed-off-by: Christoph Daniel Schulze <cds@informatik.uni-kiel.de>

--- a/plugins/de.cau.cs.kieler.kiesl.klighd/plugin.xml
+++ b/plugins/de.cau.cs.kieler.kiesl.klighd/plugin.xml
@@ -8,5 +8,12 @@
             id="de.cau.cs.kieler.kiesl.klighd.SequenceDiagramSynthesis">
       </diagramSynthesis>
    </extension>
+   <extension
+         point="de.cau.cs.kieler.klighd.extensions">
+      <action
+            class="de.cau.cs.kieler.kiesl.klighd.SequenceFocusAndContextAction"
+            id="de.cau.cs.kieler.kiesl.klighd.SequenceFocusAndContextAction">
+      </action>
+   </extension>
 
 </plugin>
